Add eIDAS to custom policies and custom UI

--- a/AAD B2C/CustomUI/customui-spid.html
+++ b/AAD B2C/CustomUI/customui-spid.html
@@ -896,6 +896,8 @@
                                 <!-- <li role="presentation"><a href="#spidpg" aria-controls="spidpg" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>&nbsp;SPID PG</a></li> -->
                                 <li role="presentation"><a href="#cie" aria-controls="cie" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;CIE</a></li>
                                 <li role="presentation"><a href="#cns" aria-controls="cns" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>&nbsp;CNS</a></li>
+                                <li role="presentation"><a href="#eidas" aria-controls="eidas" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;eIDAS</a></li>
+
                             </ul>
 
                             <!-- Tab panes -->
@@ -931,6 +933,14 @@
                                         <div id="cns-button-container"></div>
                                     </section>
                                 </div>
+                                <div role="tabpanel" class="tab-pane" id="eidas">
+                                    <section>
+                                        <p>The <b>eIDAS</b> regulation is the legislative basis for electronic interactions between businesses, citizens and public authorities, improving the security and efficiency of online services and e-business transactions
+                                            in the European Union.</p>
+                                        <div id="eidas-button-container"></div>
+                                    </section>
+                                </div>
+
                             </div>
 
                         </div>
